Fix bug where picking random countries from API values could be duplicated. Fix text alignment on some elements. Increase amount of state pulled by Flag component in order to shorten syntax.

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   color: var(--primary-color);
   user-select: none;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  text-align: center;
 }
 
 header,
@@ -46,6 +47,7 @@ nav {
 }
 
 button {
+	/*text-align: center;*/
   font-size: 1rem;
   font-family: inherit;
   background-color: inherit;
@@ -76,17 +78,12 @@ footer a:hover i {
   border: 1px solid #262626;
   border-radius: 15px;
   box-shadow: var(--shadow);
-  transition: 0.3s;
-}
-
-.btn:hover {
-  box-shadow: 0px 8px 20px var(--shadow-on-hover);
-  transform: translateY(-2px);
+  transition: all 0.3s;
 }
 
 .country-buttons {
   margin: 0 1.5%;
-  transition: all 0.5s 0.6s, color .5s;
+  transition: all 0.5s 0.6s;
   visibility: visible;
   opacity: 1;
 }
@@ -117,7 +114,6 @@ footer a:hover i {
 }
 
 .hint {
-  /*margin-top: 20px;*/
   display: flex;
   align-items: center;
   flex-direction: column;
